# dev-dockers

./: .gitignore  .gitmodules  AGENTS.md  GEMINI.md  README.md  pyproject.toml
.github/workflows/: README.md
context/: README.md
context/archived/: README.md
context/design/: README.md
context/hints/: README.md  about-vllm-env-requirements.md  howto-compile-vllm-cuda-12-6-for-glm-4-7.md  howto-create-self-hosted-conda-subset-repo-with-pixi.md  howto-create-self-hosted-conda-subset-repo.md  howto-create-self-hosted-pypi-subset-repo.md  howto-host-glm-4-7-with-sglang-on-cuda-12-6.md  howto-move-pixi-environment-offline.md  howto-use-claude-code-with-local-models.md
context/instructions/: README.md  make-docker-config-dir.md
context/issues/: README.md
context/logs/: README.md
context/plans/: README.md  plan-add-sglang-inference-in-infer-dev.md  plan-add-vllm-package-auto-infer-infer-dev.md  plan-auto-infer-llama-cpp.md  plan-auto-install-llama-cpp-pkg-on-boot.md  plan-fix-peidocker-runtime-issues.md  plan-integrate-litellm-claude-bridge.md  plan-switch-peidocker-agent-installation-to-bun.md
context/refcode/: README.md
context/roles/: README.md
context/rules/: README.md
context/summaries/: README.md
context/tasks/: README.md
context/tools/: README.md
dockers/: README.md
dockers/base-ubuntu-24-04/: docker-compose.yml  stage-2.Dockerfile  user_config.yml
dockers/common-cu128/: README.md  env.example  pei-configure.sh
docs/: README.md
models/: .gitignore  README.md  bootstrap.sh
scripts/: README.md
tests/: README.md
(+128 files in other folders)
