[project]
authors = [{name = "igamenovoer", email = "igamenovoer@xx.com"}]
dependencies = ["requests>=2.32.5,<3"]
name = "dev-dockers"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dev_dockers = { path = ".", editable = true }
pei-docker = { path = "extern/tracked/PeiDocker", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
skopeo = ">=1.21.0,<2"
